0.40007 TBD
    Re-factor widget to provide 'render_element' method
    Various doc updates
    Move 'by_flag' processing into '_merge_updates'

0.40006 Tues Apr 10, 2012
    Render::Table incorrect table start
    Minor doc cleanup
    Add 'build_label_method'
    Re-do merging of widget_tags
    Implement experimental 'include' list for Form/Compound fields
    Refactor merge_updates and update_subfields to handle contains
    Add 'by_type' to update_subfields

0.40005 Mon Mar 26, 2012
    prevent undef from being passed to maketext
    expand use of 'posted' flag to check false values
    add wrap_label method

0.40004 Fri Mar 23, 2012
    Don't put element attributes on select options
    Make render_list lazy
    Better defaults for compound fields
    Provide package name for die when not extending
    Add block_list to provide blocks
    Defaults for repeatable fields

0.40003 Wed Mar 14, 2012
    Move dfv test that fails prereqs

0.40002 Tue Mar 13, 2012
    Put form wrappers that are fieldsets inside form tag; outside not legal HTML
    Doc updates
    Add 'NonEditable' field and 'Span' field widget
    Patch HTMLAttributes (compatibility for older style custom widgets)

0.40001 Wed Mar 7, 2012
    Remove \K in regex for ucc_widget; doesn't work pre 5.10
    Switch DateTime field to use inflate_default_method

0.40000 Tue Mar 6, 2012

    **** There are many changes to rendering, many of them incompatible.
       These changes *will* break existing form rendering.
       You must check that your rendering works before upgrading. Making a copy
       of the old code (the widget and rendering roles) may be helpful (or use
       the compatibility libraries -- see below).
       I always prefer to maintain backward compatibility if possible, but
       a number of the improvements were not possible without breaking
       compatibility, so I did a lot of changes at once.
    Compatibility libraries are provided to help support rendering that relied